# whisper-transcriber

./: .gitignore  README.md  build_app.py  main.py  pyproject.toml  requirements.txt  run_with_logging.py  setup.py  whisper-custom.spec  whisper-transcriber.spec  windows_app.py
.github/workflows/: ci.yml  release.yml
core/: Makefile  go.mod
core/cmd/wt-core/: main.go
core/internal/audio/: extractor.go  extractor_test.go
core/internal/cleanup/: tempfiles.go
core/internal/hardware/: detect.go  detect_test.go
docs/: index.md
docs/architecture/: concurrency-model.md  ipc-protocol.md  overview.md
docs/go/: audio-extractor.md  hardware-detector.md  ipc-server.md  model-downloader.md  temp-cleanup.md
docs/ops/: building.md  environment-setup.md  troubleshooting.md
docs/python/: export-formats.md  ipc-client.md  model-cache.md  text-processing.md  transcription-engine.md
docs/testing/: adding-tests.md  go-tests.md  python-tests.md
docs/ui/: component-lifecycle.md  threading-model.md  window-layout.md
scripts/: build.py  install_dev.ps1  install_dev.sh  run.py
src/whisper_transcriber/: __init__.py  app.py  audio.py  transcription.py  utils.py
tests/python/: test_export.py  test_text_utils.py  test_transcription.py
ui/: pyproject.toml  requirements-dev.txt  requirements.txt
ui/app/: main.py  window.py
ui/app/components/: drop_zone.py  model_selector.py  progress_bar.py  toast.py  toolbar.py  transcript_view.py
ui/app/core/: export.py  ipc_client.py  model_cache.py  transcription.py
ui/app/utils/: platform.py  text.py
(+9 files in other folders)
