[project]
name = "whisper-transcriber-ui"
version = "2.0.0"
description = "Desktop speech-to-text transcriber using faster-whisper"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
